--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel src/index.html --out-dir docs",
+    "clean": "rm -rf docs",
+    "build": "parcel build src/index.html --out-dir docs",
+    "prebuild": "yarn clean"
   },
   "repository": {
     "type": "git",
@@ -18,17 +21,14 @@
   },
   "homepage": "https://github.com/AndrewUsher/webrtc-picture-app#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-cli": "^2.0.1",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-stylus": "^2.7.0"
+    "parcel-bundler": "^1.11.0",
+    "stylus": "^0.54.5"
   }
 }
