--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "parcel src/index.html --out-dir docs",
     "clean": "rm -rf docs",
-    "build": "parcel build src/index.html --out-dir docs --public-url webrtc-picture-app",
+    "build": "parcel build src/index.html --out-dir docs --public-url http://andrewusher.co/webrtc-picture-app",
     "prebuild": "yarn clean"
   },
   "repository": {
